--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
             </div>
 
         </nav>
+
+        <div id="hero">
+
+            <div class="container-small">
+
+            </div>
+
+        </div>
         
     </header>
 
