--- a/index.html
+++ b/index.html
@@ -49,9 +49,30 @@
             </div>
 
         </div>
-        
+
     </header>
 
+
+    <!-- struttura centrale -->
+    <main>
+
+        <!-- prima sezione -->
+        <section class="bg-white">
+
+            <div class="container">
+
+                <div class="big">
+
+                </div>
+
+                <div class="small">
+
+                </div>
+                
+            </div>
+
+        </section>
+    </main>
 </body>
 
 </html>
