completate seconda e terza sezione

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <main>
 
         <!-- prima sezione -->
-        <section class="bg-white">
+        <section>
 
             <div class="container">
 
@@ -68,7 +68,41 @@
                 <div class="small">
 
                 </div>
-                
+
+            </div>
+
+        </section>
+
+        <!-- seconda sezione -->
+        <section class="bg-gray">
+
+            <div class="container">
+
+                <div class="big">
+
+                </div>
+
+                <div class="small">
+
+                </div>
+
+            </div>
+
+        </section>
+
+        <!-- terza sezione -->
+        <section>
+
+            <div class="container">
+
+                <div class="big">
+
+                </div>
+
+                <div class="small">
+
+                </div>
+
             </div>
 
         </section>
