completata quarta sezione

--- a/index.html
+++ b/index.html
@@ -106,6 +106,19 @@
             </div>
 
         </section>
+
+        <!-- quarta sezione -->
+        <section class="bg-gray">
+
+            <div class="container">
+
+                <div class="long">
+
+                </div>
+                
+            </div>
+
+        </section>
     </main>
 </body>
 
