--- a/index.html
+++ b/index.html
@@ -115,11 +115,44 @@
                 <div class="long">
 
                 </div>
-                
+
             </div>
 
         </section>
+
     </main>
+
+    <footer>
+
+        <div id="footer-top" class="container">
+
+            <div class="footer-big"></div>
+
+            <div id="footer-top-container">
+
+                <div class="footer-small"></div>
+                <div class="footer-small"></div>
+                <div class="footer-small"></div>
+                <div class="footer-small"></div>
+
+            </div>
+
+        </div>
+
+        <div id="footer-bottom" class="container">
+
+            <div class="logo">
+                Logo
+            </div>
+
+            <div class="button">
+                Bottone
+            </div>
+
+        </div>
+
+    </footer>
+
 </body>
 
 </html>
